--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <ul>
           <a href="index.html">Forside</a>
           <a href="kategori.html">Kategori</a>
-          <a href="produktliste.html">Produktliste</a>
-          <a href="produkt.html">Produkt</a>
         </ul>
       </nav>
     </header>
-    <h1>Kommer snart...</h1>
+    <h1 class="forsideTekst">
+      Denne side er på eget ansvar, scam kan forekomme
+    </h1>
   </body>
 </html>
