--- a/kategori.html
+++ b/kategori.html
@@ -13,23 +13,21 @@
         <ul>
           <a href="index.html">Forside</a>
           <a href="kategori.html">Kategori</a>
-          <a href="produktliste.html">Produktliste</a>
-          <a href="produkt.html">Produkt</a>
         </ul>
       </nav>
     </header>
     <main>
       <div class="kategoriList">
         <section class="kategori">
-          <ul>
-            <a href="produktliste.html"> <li>Bluser</li></a>
-            <a href="produktliste.html"><li>Bukser</li></a>
-            <a href="produktliste.html"><li>Jakker</li></a>
-            <a href="produktliste.html"><li>Sko</li></a>
-            <a href="produktliste.html"><li>Accesories</li></a>
-          </ul>
+          <template
+            ><li>
+              <a class="Bluser" href="produktliste.html">Bluser</a>
+            </li></template
+          >
+          <ul></ul>
         </section>
       </div>
     </main>
+    <script src="kategori.js"></script>
   </body>
 </html>
