--- a/produkt.html
+++ b/produkt.html
@@ -13,8 +13,6 @@
         <ul>
           <a href="index.html">Forside</a>
           <a href="kategori.html">Kategori</a>
-          <a href="produktliste.html">Produktliste</a>
-          <a href="produkt.html">Produkt</a>
         </ul>
       </nav>
     </header>
@@ -25,12 +23,14 @@
           <img src=https://kea-alt-del.dk/t7/images/webp/640/1163.webp
           alt="trøje" />
           <div>
-            <h1>Sahara Team India Fanwear Round Neck Jersey</h1>
-            <h2>Nike T-shirt</h2>
+            <h1 class="produktnavn">
+              Sahara Team India Fanwear Round Neck Jersey
+            </h1>
+            <h2><span class="brand">Nike</span> T-shirt</h2>
             <p class="price">895kr</p>
             <section class="purchaseBox">
               <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
-              <p>Nike T-shirt</p>
+              <p><span class="brand">Nike</span> T-shirt</p>
               <form>
                 <label for="Choose a size">
                   <select name="size">
@@ -51,12 +51,15 @@
         <div>
           <h3>Produkt information</h3>
           <ul>
-            <p>Model name - Sahara Team India Fanwear Round Neck Jersey</p>
+            <p class="productname">
+              Model name - Sahara Team India Fanwear Round Neck Jersey
+            </p>
             <p>Farve - Blue</p>
             <p>Article number - 1163</p>
           </ul>
         </div>
       </section>
     </main>
+    <script src="produkt.js"></script>
   </body>
 </html>
