--- a/produktliste.html
+++ b/produktliste.html
@@ -14,36 +14,35 @@
         <ul>
           <a href="index.html">Forside</a>
           <a href="kategori.html">Kategori</a>
-          <a href="produktliste.html">Produktliste</a>
-          <a href="produkt.html">Produkt</a>
         </ul>
       </nav>
     </header>
     <main>
       <div class="grid_2-4">
+        <template id="smallProductTemplate">
+          <article class="produkt">
+            <img
+              src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
+              alt=""
+            />
+            <h2>Jersey</h2>
+            <p class="description">Nike t-shirt</p>
+            <p class="price">895kr</p>
+            <a class="seMere" href="produkt.html">Produkt</a>
+          </article>
+        </template>
+
+        <!-- <article class="produkt">
+          <img src=https://kea-alt-del.dk/t7/images/webp/640/1164.webp alt="" />
+          <h2>Jersey</h2>
+          <p>Nike t-shirt</p>
+          <p class="price">895kr</p>
+          <a href="produkt.html">Produkt</a>
+        </article>
+
         <article class="produkt">
-          <img
-            src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
-            alt="trøje"
+          <img src=https://kea-alt-del.dk/t7/images/webp/1000/1165.webp alt=""
           />
-          <h2>Jersey</h2>
-          <p>Nike t-shirt</p>
-          <p class="price">895kr</p>
-          <a href="produkt.html">Produkt</a>
-        </article>
-
-        <article class="produkt">
-          <img src=https://kea-alt-del.dk/t7/images/webp/640/1164.webp
-          alt="trøje" />
-          <h2>Jersey</h2>
-          <p>Nike t-shirt</p>
-          <p class="price">895kr</p>
-          <a href="produkt.html">Produkt</a>
-        </article>
-
-        <article class="produkt">
-          <img src=https://kea-alt-del.dk/t7/images/webp/1000/1165.webp
-          alt="trøje" />
           <h2>Cardigan</h2>
           <p>Nike t-shirt</p>
           <p class="price">895kr</p>
@@ -51,8 +50,7 @@
         </article>
 
         <article class="produkt">
-          <img src=https://kea-alt-del.dk/t7/images/webp/640/1525.webp
-          alt="trøje" />
+          <img src=https://kea-alt-del.dk/t7/images/webp/640/1525.webp alt="" />
           <h2>Backpack</h2>
           <p>Nike t-shirt</p>
           <p class="price">895kr</p>
@@ -60,8 +58,7 @@
         </article>
 
         <article class="produkt">
-          <img src=https://kea-alt-del.dk/t7/images/webp/640/1526.webp
-          alt="trøje" />
+          <img src=https://kea-alt-del.dk/t7/images/webp/640/1526.webp alt="" />
           <h2>Backpack</h2>
           <p>Nike t-shirt</p>
           <p class="price">895kr</p>
@@ -69,8 +66,7 @@
         </article>
 
         <article class="produkt">
-          <img src=https://kea-alt-del.dk/t7/images/webp/640/1528.webp
-          alt="trøje" />
+          <img src=https://kea-alt-del.dk/t7/images/webp/640/1528.webp alt="" />
           <h2>Zip up</h2>
           <p>Nike t-shirt</p>
           <div class="grid_1-1">
@@ -81,8 +77,7 @@
         </article>
 
         <article class="produkt">
-          <img src=https://kea-alt-del.dk/t7/images/webp/640/1529.webp
-          alt="trøje" />
+          <img src=https://kea-alt-del.dk/t7/images/webp/640/1529.webp alt="" />
           <h2>T-shirt</h2>
           <p>Nike t-shirt</p>
           <p class="price">895kr</p>
@@ -90,8 +85,7 @@
         </article>
 
         <article class="produkt">
-          <img src=https://kea-alt-del.dk/t7/images/webp/640/1530.webp
-          alt="trøje" />
+          <img src=https://kea-alt-del.dk/t7/images/webp/640/1530.webp alt="" />
           <h2>Zip up</h2>
           <p>Nike t-shirt</p>
           <p class="price">895kr</p>
@@ -99,8 +93,7 @@
         </article>
 
         <article class="produkt-udsolgt">
-          <img src=https://kea-alt-del.dk/t7/images/webp/640/1532.webp
-          alt="trøje" />
+          <img src=https://kea-alt-del.dk/t7/images/webp/640/1532.webp alt="" />
           <h2>T-shirt</h2>
           <p>Nike t-shirt</p>
           <p class="price">895kr</p>
@@ -109,14 +102,14 @@
         </article>
 
         <article class="produkt">
-          <img src=https://kea-alt-del.dk/t7/images/webp/640/1531.webp
-          alt="trøje" />
+          <img src=https://kea-alt-del.dk/t7/images/webp/640/1531.webp alt="" />
           <h2>T-shirt</h2>
           <p>Nike t-shirt</p>
           <p class="price">895kr</p>
           <a href="produkt.html">Produkt</a>
-        </article>
+        </article> -->
       </div>
     </main>
   </body>
+  <script src="produktliste.js"></script>
 </html>
